--- a/src/components/header.css
+++ b/src/components/header.css
@@ -34,7 +34,7 @@
     display: block;
     float: left;
     /* So "controls" is displayed on the gray stripe */
-    height: 9.7vh;
+    height: 9.77vh;
     width: auto;
     margin-left: 1vw;
 }
